<resources>
    <string name="app_name">MusicTheorio</string>
    <string name="action_settings">Settings</string>
    <string name="subtitle">Learn you some music theory</string>
    <!-- -
        This is an ad unit ID for an interstitial test ad. Replace with your own interstitial ad unit id.
        For more information, see https://support.google.com/admob/answer/3052638
    <!- -->
    <string name="interstitial_ad_unit_id">ca-app-pub-3940256099942544/1033173712</string>
    <string name="intervals_button">Intervals</string>
    <string name="scales_button">Scales</string>
    <string name="play_button">Play sound</string>

    <string name="intervals_title">Intervals</string>
    <string name="chord_view_title">Chord View</string>

    <string name="scales">Scales</string>
    <string name="scales_title">Scales</string>
    <string name="scales_radio_major">Major</string>
    <string name="scales_radio_minor">Minor</string>
    <string name="button_next">Next</string>
    <string name="scales_loop">Loop</string>
    <string name="circle_of_fifths_title">Circle of fifths</string>
    <string name="circle_of_fifths_button">Circle of fifths</string>
    <string-array name="scale_modes">
        <item>Natural</item>
        <item>Harmonic</item>
        <item>Melodic</item>
    </string-array>
</resources>